# aiven-open-source-data-infrastructure-meetup

./: .gitignore  README.md  config.xml  pyproject.toml
demo1/: app.py  download_parquet_files.py  pyproject.toml
