[tool.poetry]
name = "aiven-open-source-data-infrastructure-meetup"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chdb = "^1.0.0"
ipython = "^8.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
