[tool.poetry]
name = "demo1"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
ipython = "^8.18.1"
rich = "^13.7.0"
tqdm = "^4.66.1"
dask = "^2023.12.0"
plotly = "^5.18.0"
streamlit = "^1.29.0"
chdb = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
